[package]
name = "cccolutils"
description = "Kerberos5 Credential Cache Collection Utilities"
license = "MIT OR Apache-2.0"

version = "0.2.2"
edition = "2018"

authors = ["Fabio Valentini <decathorpe@gmail.com>"]
readme = "README.md"
categories = ["authentication"]
keywords = ["kerberos", "krb5", "authentication"]
repository = "https://github.com/ironthree/cccolutils-rs"

links = "krb5"
build = "build.rs"

exclude = [
    "/.github/",
    "/rustfmt.toml",
    "/CMakeLists.txt",
    "/uncrustify.cfg",
    "/src/test.c",
]

[build-dependencies]
cc = "^1.0.48"

[dependencies]

[profile.release]
lto = true

[badges]
maintenance = { status = "deprecated" }
